[package]
name = "composerize-np"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
indexmap = { version = "2.0", features = ["serde"] }
atty = "0.2"
